# coding-tools

audit/: pyproject.toml
audit/audit/: cli.py
complexity/: pyproject.toml
complexity/complexity/: __main__.py  cli.py  matlab_metrics.py  python_metrics.py  reporter.py
copypaste/: pyproject.toml
copypaste/copypaste/: __main__.py  cli.py  detector.py  fingerprint.py  normalizer.py
deadfiles/: pyproject.toml
deadfiles/deadfiles/: __main__.py  cli.py  matlab_refs.py  python_refs.py  scanner.py
depgraph/: pyproject.toml
depgraph/depgraph/: __main__.py  cli.py  cross_lang.py  graph.py  matlab_deps.py  python_deps.py
erroraudit/: pyproject.toml
erroraudit/erroraudit/: __main__.py  cli.py  matlab_audit.py  python_audit.py
secretscan/: pyproject.toml
secretscan/secretscan/: __main__.py  cli.py  entropy.py  patterns.py  scanner.py
staletrack/: pyproject.toml
staletrack/staletrack/: __main__.py  cli.py  git_age.py  scanner.py
vartrace/: pyproject.toml
vartrace-matlab/: pyproject.toml
vartrace-matlab/vartrace_matlab/: __init__.py  __main__.py  analyzer.py  cli.py  graph.py  parser.py  resolver.py  sinks.py
vartrace/vartrace/: __init__.py  __main__.py  analyzer.py  cli.py  collector.py  graph.py  resolver.py  sinks.py
