[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deadfiles"
version = "0.1.0"
description = "Find orphaned source files that nothing references"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["deadfiles*"]

[project.scripts]
deadfiles = "deadfiles.cli:main"
