[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depgraph"
version = "0.1.0"
description = "Map file dependencies, detect circular imports, find coupling hotspots"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["depgraph*"]

[project.scripts]
depgraph = "depgraph.cli:main"
