[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secretscan"
version = "0.1.0"
description = "Scan source code for hardcoded secrets and credentials"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["secretscan*"]

[project.scripts]
secretscan = "secretscan.cli:main"
